# DebridSync

./: .gitignore  Dockerfile  LICENSE  README.md  config.yml.sample  pyproject.toml
src/: main.py  periodic_task.py
src/content/: collection_manager.py  config.py  content_manager.py  plex_provider.py  trakt_provider.py
src/content_fetcher/: collection_manager.py  config.py  content_manager.py  content_provider.py  main.py  media_collection_provider.py  plex_provider.py  trakt_provider.py
src/debrid/: real_debrid.py
src/indexer/: indexer.py  indexer_manager.py  torrentio.py
src/models/: filter.py  movie.py  quality_profile.py  release.py  torrent_ranking.py
src/release_finder/: release_finder.py  release_finder_manager.py  torrentio_finder.py
tests/: test_content_manager.py  test_filter.py  test_indexer_manager.py  test_plex_provider.py  test_real_debrid.py  test_release_finder_manager.py  test_torrentio.py  test_torrentio_finder.py  test_trakt_provider.py
